床战地图标记模式重做 + 商店实体与团队升级
- 标记模式改为手动标记所有点位：左键标记/右键取消，标记点放点击方块上方
  （粒子+可视化方块）；不再对称推断，队伍性质点按最近床自动认领队伍
- 拆分普通商店与团队升级商店：普通商店=村民实体、升级商店=僵尸实体
  （persistent/无敌/静音/禁AI+悬浮名），右击实体打开对应 GUI
- 商店内容对齐 Hypixel 价目表：普通商店 40+ 项（方块/近战/盔甲/工具/远程/药水/实用）
  团队升级 14 项（锋利/保护I~IV/疯狂矿工/锻炉I~IV/治愈池/末影龙增益/陷阱）
- 团队升级实际生效：锋利保护附魔、急迫、锻炉多掉资源、治愈池回血、末影龙增益、陷阱减速
- 修复 RegistryKey 错误包名、session.diamonds/emeralds 旧字段引用
- 删除临时扫描脚本与价目表 txt